@@ -2,7 +2,7 @@
 <HEAD>
 	<META NAME="author" CONTENT="Easy Software Products">
 	<META NAME="copyright" CONTENT="Copyright 1997-2001, See the GNU General Public License for Details.">
-	<META NAME="docnumber" CONTENT="ESP-003-20011015">
+	<META NAME="docnumber" CONTENT="ESP-003-20011018">
 	<TITLE>HTMLDOC 1.8.15 Software Users Manual</TITLE>
 </HEAD>
 <BODY>
